Fix input range style on firefox

--- a/src/styles/input-range.css
+++ b/src/styles/input-range.css
@@ -2,6 +2,7 @@ input[type="range"] {
   -webkit-appearance: none;
   width: 100%;
   margin: 9.75px 0;
+  background: transparent;
 }
 input[type="range"]:focus {
   outline: none;
